[project]
name = "ComfyUI-MediaRequestNodes"
description = "This is a request node tool designed for making HTTP requests (GET/POST) to APIs and viewing the responses. It is useful for API testing and development."
version = "1.1.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/ahkimkoo/ComfyUI-RequestNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "ahkimkoo"
DisplayName = "Media Request Nodes"
Icon = ""
