[project]
name = "ComfyUI-HttpRequestNodes"
description = "Extended HTTP request nodes for ComfyUI — supports image, audio, video binary data, form-data upload, and raw binary I/O. Fork of felixszeto/ComfyUI-RequestNodes."
version = "1.1.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/ahkimkoo/ComfyUI-HttpRequestNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "ahkimkoo"
DisplayName = "ComfyUI-HttpRequestNodes"
Icon = ""
